# bridges

./: .gitignore  README.md  hellworld.cpp
.github/workflows/: workflow.yml
bes_transmit/: CMakeLists.txt  package.xml
bes_transmit/include/: back_end_http.hpp  back_end_publisher.hpp  back_end_subscriber.hpp  bes_transmit_center.hpp  posix_sockets.hpp
bes_transmit/include/file_uploading/: file_uploading.h
bes_transmit/src/: bes_transmit_center.cpp  file_uploading.cpp  main.cpp
bluetooth/: package.xml  setup.py
bluetooth/bluetooth/: btwifitool.py  gattserver.py  rclcomm.py  record.py  remote.py
bluetooth/launch/: bluetooth.launch.py
common_protocol/: CMakeLists.txt  package.xml
common_protocol/include/common_parser/: can_parser.hpp  parser_base.hpp
common_protocol/include/common_protocol/: common.hpp  protocol_base.hpp
common_protocol/test/: CMakeLists.txt
cyberdog_grpc/: CMakeLists.txt  README.md  package.xml
cyberdog_grpc/include/: action_task.hpp  cyberdog_app.hpp  cyberdog_app_client.hpp  cyberdog_app_server.hpp  msg_dispatcher.hpp  msgdispatcher.hpp  net_avalible.hpp  ready_sn.hpp  threadsafe_queue.hpp  time_interval.hpp  transmit_files.hpp
cyberdog_grpc/protos/: cyberdog_app.proto
cyberdog_grpc/src/: cyberdog_app.cpp  cyberdog_app_client.cpp  cyberdog_app_server.cpp  main.cpp  timer_interval.cpp
cyberdog_grpc/test/: CMakeLists.txt
cyberdog_grpc/test/android_grpc_simulator/: main.cpp
cyberdog_ota/: CMakeLists.txt  package.xml
cyberdog_ota/include/cyberdog_ota/: client.hpp  client_interface.hpp  command_interface.hpp  command_mcu.hpp  command_nx.hpp  crc32c.hpp  factory.hpp  factory_interface.hpp  file_system.hpp  json_parser.hpp  manager.hpp  manager_mcu.hpp  manager_nx.hpp  md5_util.hpp  ota_node.hpp  ota_options.hpp  port.hpp  protocol_app_message.hpp  protocol_interface.hpp  protocol_server_message.hpp  rbtree.hpp  server.hpp  server_interface.hpp  string.hpp  string_util.hpp  system_info.hpp  threading.hpp  timer.hpp  utils.hpp  version.hpp
cyberdog_ota/src/: client.cpp  client_interface.cpp  command_interface.cpp  command_mcu.cpp  command_nx.cpp  crc32c.cpp  cybredog_ota_main.cpp  factory.cpp  factory_interface.cpp  file_system.cpp  json_parser.cpp  manager.cpp  manager_mcu.cpp  manager_nx.cpp  md5_util.cpp  ota_node.cpp  ota_options.cpp  protocol_app_message.cpp  protocol_interface.cpp  protocol_server_message.cpp  rbtree.cpp  server.cpp  server_interface.cpp  string.cpp  string_util.cpp  system_info.cpp  threading.cpp  timer.cpp  utils.cpp  version.cpp
cyberdog_ota/test/: TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  tcp_client_test.cpp  tcp_server_test.cpp
embed_protocol/: CMakeLists.txt  README.md  README_EN.md  package.xml
embed_protocol/include/embed_parser/: can_parser.hpp  parser_base.hpp
embed_protocol/include/embed_protocol/: can_protocol.hpp  common.hpp  embed_protocol.hpp  protocol_base.hpp
embed_protocol/test/: CMakeLists.txt  package.xml
embed_protocol/test/embed_protocol_test/: bms_test_node.cpp  can_node_one.cpp  can_node_test.cpp  can_node_two.cpp  embed_protocol_test.cpp  sensor_simulator_node.cpp
embed_protocol/test/embed_protocol_test/parser/can_protocal_toml/: battery_simulator.toml  test_receive.toml  test_send.toml  tof_simulator.toml  tof_simulator_head.toml  tof_simulator_rear.toml  ultrasonic_simulator.toml
grpc/: CMakeLists.txt  package.xml
params/: CMakeLists.txt  package.xml
params/device/: led.toml
params/toml_config/bes_transmit/: server.pem
params/toml_config/cyberdog_grpc/: ca-cert.pem  server-cert.pem  server-key.pem
params/toml_config/database/: config.toml
params/toml_config/device/: battery.toml  battery_config.toml  head_led.toml  led_color_config.toml  led_priority.toml  mini_led.toml  tail_led.toml  uwb_config.toml  (+6 more)
protocol/: CMakeLists.txt  compile_grpc.cmake.in  compile_lcm.cmake  compile_lcm.cmake.in  compile_ros.cmake  compile_ros.cmake.in  package.xml
protocol/grpc/: CMakeLists.txt  README.md  package.xml
protocol/grpc/include/: cyberdog_app.hpp  cyberdog_app_client.hpp  cyberdog_app_server.hpp
protocol/grpc/protos/: cyberdog_app.proto
protocol/grpc/src/: action_clients.cpp  cyberdog_app.cpp  cyberdog_app_client.cpp  cyberdog_app_server.cpp
protocol/lcm/: danger_states_lcmt.lcm  file_lcmt.lcm  file_recv_lcmt.lcm  file_send_lcmt.lcm  localization_lcmt.lcm  low_power_lcmt.lcm  microstrain_lcmt.lcm  motion_feedback.lcm.szh  state_estimator_lcmt.lcm
protocol/ros/: package.xml
protocol/ros/action/: AutoCharging.action  Navigation.action  OverTheAir.action  SeatAdjust.action  Speech.action
protocol/ros/msg/: AlgoList.msg  AlgoTaskStatus.msg  AudioPlay.msg  AudioPlayExtend.msg  AudioStatus.msg  AudioVoiceprintResult.msg  AuthToken.msg  BLEDFUProgress.msg  BLEInfo.msg  BluetoothStatus.msg  Bms.msg  BmsStatus.msg  Body.msg  BodyInfo.msg  ConnectorStatus.msg  Face.msg  FaceEntryResult.msg  FaceInfo.msg  FaceRecognitionResult.msg  FaceResult.msg  FollowPoints.msg  Gesture.msg  GestureActionResult.msg  GpsPayload.msg  HeadTofPayload.msg  Heartbeats.msg  Label.msg  ManagerState.msg  MapLabel.msg  MapMetaData.msg  MisenseStatus.msg  MotionCmd.msg  MotionCode.msg  MotionCustomCmd.msg  MotionID.msg  MotionSequenceGait.msg  MotionSequencePace.msg  MotionSequenceParam.msg  MotionServoCmd.msg  MotionServoResponse.msg  (+32 more)
protocol/ros/srv/: AccountAdd.srv  AccountChange.srv  AccountDelete.srv  AccountSearch.srv  AlgoManager.srv  AlgoTaskStatus.srv  AllUserSearch.srv  AudioAuthId.srv  AudioAuthToken.srv  AudioExecute.srv  AudioNickName.srv  AudioTextPlay.srv  AudioVoiceprintEntry.srv  AudioVoiceprintTrain.srv  AudioVoiceprintsSet.srv  AudioVolumeGet.srv  AudioVolumeSet.srv  BLEConnect.srv  BLEScan.srv  BesHttp.srv  BesHttpSendFile.srv  BmsCmd.srv  BmsInfo.srv  BodyRegion.srv  CameraService.srv  ConnectIp.srv  ConnectPc.srv  Connector.srv  ConnectorStatus.srv  DeleteTrainPlan.srv  DeviceInfo.srv  ElecSkin.srv  FaceEntry.srv  FaceManager.srv  FaceRec.srv  FsMachine.srv  GestureActionControl.srv  GetBLEBatteryLevel.srv  GetMapLabel.srv  GetUWBMacSessionID.srv  (+31 more)
(+32 files in other folders)
