<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bes_transmit</name>
  <version>1.0.0</version>
  <description>back-end transmit data service</description>
  <maintainer email="liukai21@xiaomi.com">LiuKai21</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>protocol</depend>
  <depend>cyberdog_common</depend>
  <depend>mqttc</depend>
  <depend>cpp_httplib</depend>
  <depend>ament_index_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
