<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>can_node_test</name>
  <version>1.0.0</version>
  <description>Examples of can node test</description>
  <maintainer email="liukai21@xiaomi.com">Liu Kai</maintainer>
  <license>Apache License 2.0</license>
  <author>Liu Kai</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>toml</build_depend>
  <build_depend>ament_index_cpp</build_depend>
  <build_depend>cyberdog_common</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>toml</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>cyberdog_common</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
